--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
     body {
-        background-color: lightblue;
+        background-color: rgb(0, 59, 252);
     }
     </style>
 </head>
