--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
     <style> 
     *{
-        margin: 0;
+        margin: 10;
         padding: 0;
         box-sizing: border-box;
+        text-align: center;
+        
     }
 
     body {
@@ -18,21 +20,7 @@
     </style>
 </head>
 <body>
-
-    <p> Lorem ipsum</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-
-    <section>
-        <h3>Kwiaty</h3>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fkwiatyagaty.com.pl%2Fsklep%2Fbukiety%2Fbukiety-mieszane%2Fdelikatnosc%2F&psig=AOvVaw2uGZ43IiFtXtY9167bWQiU&ust=1700909874587000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJjQlc693IIDFQAAAAAdAAAAABAF">
-    </section>
-
-    <section>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.piupiuflowers.pl%2FRokoko&psig=AOvVaw2uGZ43IiFtXtY9167bWQiU&ust=1700909874587000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJjQlc693IIDFQAAAAAdAAAAABAO">
-    </section>
-
-    <section>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Flifein.pl%2Fkwiaty-od-a-do-z%2F&psig=AOvVaw2uGZ43IiFtXtY9167bWQiU&ust=1700909874587000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJjQlc693IIDFQAAAAAdAAAAABAY">
-    </section>
+    <p> Lorem ipsum</p>
 </body>
 </html>
