--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         padding: 0;
         box-sizing: border-box;
         text-align: center;
+        p {
+            width: 400px;
+            
+        }
     }
 
     body {
