--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         text-align: center;
         p {
             width: 400px;
-            
+            margin: auto;
+            font-size: 24px;
         }
     }
 
